--- a/IsButikMedEF/MainWindow.xaml
+++ b/IsButikMedEF/MainWindow.xaml
@@ -24,7 +24,8 @@
                     <Label x:Name="LabelNavn" Content="Navn:" HorizontalAlignment="Left" Margin="52,56,0,0" VerticalAlignment="Top"/>
                     <Label x:Name="LabelPris" Content="Pris:" HorizontalAlignment="Left" Margin="54,114,0,0" VerticalAlignment="Top"/>
                     <Label x:Name="LabelBeskrivelse" Content="Beskrivelse:" HorizontalAlignment="Left" Margin="54,177,0,0" VerticalAlignment="Top"/>
-                    <Button x:Name="BtnOpretIs" Content="Opret" HorizontalAlignment="Left" Margin="177,340,0,0" VerticalAlignment="Top" Height="35" Width="62" Click="BtnOpretIs_Click"/>
+                    <Button x:Name="BtnOpretIs" Content="Gem" HorizontalAlignment="Left" Margin="177,340,0,0" VerticalAlignment="Top" Height="35" Width="62" Click="BtnGemIs_Click"/>
+                    <Button x:Name="BtnSletVare" Content="Slet" HorizontalAlignment="Left" Margin="659,340,0,0" VerticalAlignment="Top" RenderTransformOrigin="1.01,1.407" Height="35" Width="59" Click="BtnSletVare_Click"/>
                 </Grid>
             </TabItem>
             <TabItem Header="Bestillinger">
